# tree-sitter-asm

./: .editorconfig  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  dprint.json  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ts_tests.yml
bindings/c/: tree-sitter-asm.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_asm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAsm/: asm.h
bindings/swift/TreeSitterAsmTests/: TreeSitterAsmTests.swift
corpus/: instr_and_reg.test  label.test  labels_directives.test
queries/asm/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.test  instr_and_reg.test  labels_directives.test  literal.test
