[package]
name = "tree-sitter-asm"
description = "assembly grammar for the tree-sitter parsing library"
authors = ["RubixDev"]
version = "0.1.0"
keywords = ["incremental", "parsing"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/rush-rs/tree-sitter-asm"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[features]
default = ["tree-sitter-standard"]
tree-sitter-standard = ["dep:tree-sitter-standard"]
tree-sitter-c2rust = ["dep:tree-sitter-c2rust", "dep:tree-sitter-wasm-build-tool"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-standard = { package = "tree-sitter", version = "0.20.9", optional = true }
tree-sitter-c2rust = { version = "0.20.9", optional = true }

[build-dependencies]
cc = "1.0"
tree-sitter-wasm-build-tool = { version = "0.1.0", optional = true }
